applying finishing touches. Closes #3

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,13 +1,5 @@
-*.iml
-.gradle
-*.jks
 *.apk
 *.aab
-google-services.json
-google_maps_api.xml
-/local.properties
-.idea
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+/src/debug/
+/src/release/
+build/
