--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,11 @@ jobs:
     steps:
     - checkout
     - run:
-        name: Get google-services.json
+        name: Get debug resources
         command: |
-          mkdir -p app/src/debug
+          mkdir -p app/src/debug/res/values
           echo $GOOGLE_SERVICES_JSON > app/src/debug/google-services.json
+          echo $GOOGLE_MAPS_API_KEY > app/src/debug/res/values/google_maps_api.xml
     - restore_cache:
         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
     - run:
@@ -39,10 +40,11 @@ jobs:
     steps:
     - checkout
     - run:
-        name: Get google-services.json
+        name: Get debug resources
         command: |
-          mkdir -p app/src/debug
+          mkdir -p app/src/debug/res/values
           echo $GOOGLE_SERVICES_JSON > app/src/debug/google-services.json
+          echo $GOOGLE_MAPS_API_KEY > app/src/debug/res/values/google_maps_api.xml
     - restore_cache:
         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
     - run:
